Fix class name alignment
Godverdomme kees ik doe het zelf wel

--- a/app/stylesheet/sections/_top-nav.scss
+++ b/app/stylesheet/sections/_top-nav.scss
@@ -75,6 +75,7 @@
 .nav-right {
   margin-left: auto;
   display: flex;
+  align-items: center;
 }
 
 .nav-timetable-name {
@@ -82,7 +83,6 @@
   color: $nav-main-color;
   font-size: 1.3em;
   font-weight: normal;
-  padding-top: .4em;
 }
 
 .nav-search {
